k8s-rewrite/flux/migration-releases/foundation/certificates.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
