k8s-rewrite/flux/migration-releases/foundation/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
  - name: web
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 30443
    port: 443
    protocol: TCP
    targetPort: websecure
  externalIPs:
  - 192.168.0.4
  - 192.168.0.5
  - 192.168.0.6
